// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > MessageBubble enviada (entregue) 1`] = `
<div
  class="group flex items-end gap-1 justify-end"
>
  <div
    class="max-w-[75%] rounded-2xl px-3.5 py-2 text-sm rounded-br-sm bg-emerald-700 text-white"
  >
    <p
      class="whitespace-pre-wrap break-words"
    >
      Existe endpoint de reset de senha?
    </p>
    <p
      class="mt-1 flex items-center justify-end gap-1.5 text-[10px] text-emerald-200/70"
    >
      <span>
        11:30
         · entregue
      </span>
    </p>
  </div>
</div>
`;

exports[`snapshots > MessageBubble recebida 1`] = `
<div
  class="group flex items-end gap-1 justify-start"
>
  <div
    class="max-w-[75%] rounded-2xl px-3.5 py-2 text-sm rounded-bl-sm bg-zinc-800 text-zinc-100"
  >
    <p
      class="whitespace-pre-wrap break-words"
    >
      Existe endpoint de reset de senha?
    </p>
    <p
      class="mt-1 flex items-center justify-end gap-1.5 text-[10px] text-zinc-500"
    >
      <span>
        11:30
      </span>
    </p>
  </div>
</div>
`;

exports[`snapshots > Sidebar com equipe e presença 1`] = `
<aside
  class="flex w-72 shrink-0 flex-col border-r border-zinc-800"
>
  <div
    class="border-b border-zinc-800 p-3"
  >
    <label
      class="mb-1 block text-xs uppercase tracking-wide text-zinc-500"
      for="perspective-select"
    >
      Conversando como
    </label>
    <select
      class="w-full rounded-md border border-zinc-700 bg-zinc-900 px-2 py-1.5 text-sm outline-none focus:border-emerald-500"
      id="perspective-select"
    >
      <option
        value=""
      >
        — selecione um agente —
      </option>
    </select>
    <p
      class="mt-2 text-xs text-zinc-500"
    >
      Você ainda não tem agentes. Crie um em “Meus agentes”.
    </p>
  </div>
  <div
    class="min-h-0 flex-1 overflow-y-auto"
  >
    <p
      class="px-3 pb-1 pt-3 text-xs uppercase tracking-wide text-zinc-500"
    >
      Equipe
    </p>
    <ul>
      <li>
        <button
          class="flex w-full items-center gap-2.5 px-3 py-2.5 text-left transition-colors hover:bg-zinc-900 "
          type="button"
        >
          <span
            aria-label="offline"
            class="inline-block h-2.5 w-2.5 rounded-full bg-zinc-600"
            role="img"
          />
          <span
            class="min-w-0 flex-1"
          >
            <span
              class="block truncate text-sm text-zinc-200"
            >
              mobile-eduardo
            </span>
            <span
              class="block truncate text-xs text-zinc-500"
            >
              Mobile do Eduardo
            </span>
          </span>
        </button>
      </li>
    </ul>
  </div>
</aside>
`;
